kubernetes/application/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: application
    name: application
    namespace: a
spec:
    type: NodePort
    selector:
        app: application
    ports:
      - name: test-http
        port: 80
        targetPort: 8080
        protocol: TCP
